--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,6 +53,27 @@ a {
       margin-top: 1rem;
       margin-left: 0; } }
 
+.page-nav{
+  color: #fff;
+  text-align: center;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957);
+}
+
+@media screen and (min-width: 64em) {
+  .page-nav {
+    padding: 4rem 5rem; }
+  }
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .page-nav {
+    padding: 2rem 3rem; } }
+
+@media screen and (max-width: 42em) {
+  .page-nav {
+    padding: 1rem 0rem; } }
+
+
 .page-header {
   color: #fff;
   text-align: center;
@@ -61,7 +82,8 @@ a {
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 5rem 6rem; }
+  }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
