--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -53,6 +53,26 @@ a {
       margin-top: 1rem;
       margin-left: 0; } }
 
+.page-gen{
+  color: #fff;
+  text-align: center;
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957);
+}
+
+@media screen and (min-width: 64em) {
+  .page-gen {
+    padding: 0rem 0rem; }
+  }
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .page-gen {
+    padding: 0rem 0rem; } }
+
+@media screen and (max-width: 42em) {
+  .page-gen {
+    padding: 0rem 0rem; } }
+
 .page-nav{
   color: #fff;
   text-align: center;
@@ -62,16 +82,16 @@ a {
 
 @media screen and (min-width: 64em) {
   .page-nav {
-    padding: 4rem 5rem; }
+    padding: 3rem 4rem; }
   }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-nav {
-    padding: 2rem 3rem; } }
+    padding: 1rem 2rem; } }
 
 @media screen and (max-width: 42em) {
   .page-nav {
-    padding: 1rem 0rem; } }
+    padding: 0rem 0rem; } }
 
 
 .page-header {
