--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,7 +77,6 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957);
 }
 
 @media screen and (min-width: 64em) {
@@ -97,8 +96,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #159957;}
 
 @media screen and (min-width: 64em) {
   .page-header {
