--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -76,7 +76,7 @@ a {
 .page-nav{
   color: #fff;
   text-align: center;
-  background-color: #159957;
+  background-color: transparent;
 }
 
 @media screen and (min-width: 64em) {
@@ -96,7 +96,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;}
+  background-color: transparent;}
 
 @media screen and (min-width: 64em) {
   .page-header {
