--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -131,6 +131,7 @@ a {
 
 .project-name {
   margin-top: 0;
+  text-align: center;
   margin-bottom: 0.1rem; }
 
 @media screen and (min-width: 64em) {
